--- a/COS225Project/pom.xml
+++ b/COS225Project/pom.xml
@@ -1,8 +1,8 @@
 <project>
 
     <modelVersion>4.0.0</modelVersion>
-// Fix the groupID
-    <groupId>com.storyreview.project</groupId>
+
+    <groupId>com.storyreview</groupId>
     <artifactId>DatabaseTutorial</artifactId>
     <version>0.0.1</version>
 
