--- a/COS225Project/pom.xml
+++ b/COS225Project/pom.xml
@@ -2,7 +2,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.storyreview</groupId>
+    <groupId>com.storyreview.story</groupId>
     <artifactId>storyProject</artifactId>
     <version>0.0.1</version>
 
