--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 COS225Project/src/resources/conString.txt
 COS225Project/src/resources/short.txt
 COS225Project/src/resources/final.txt
+*/conString.txt
