--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ COS225Project/src/resources/conString.txt
 COS225Project/src/resources/short.txt
 COS225Project/src/resources/final.txt
 */conString.txt
+COS225Project/src/resources/conString.txt
