--- a/COS225Project/pom.xml
+++ b/COS225Project/pom.xml
@@ -25,7 +25,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.5.0</version>
                 <configuration>
-                    <mainClass>com.storyreview.menu.Menu</mainClass>
+                    <mainClass>com.storyreview.story.Startup</mainClass>
                 </configuration>
             </plugin>
         </plugins>
